--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Company Name Website Created with React by Lexi Jack" />
+  <meta name="description" content="Hui Waa o Puget Sound Created with React by Lexi Scales" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Company Name</title>
+  <title>HWOPS</title>
 </head>
 
 <body>
